--- a/css/style-home.css
+++ b/css/style-home.css
@@ -80,13 +80,25 @@ html {
 }
 
 @-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
 }
 
 @keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
 }
 
 /* -------- HOME PAGE MOBILE -------- */
@@ -155,32 +167,32 @@ html {
 
 .modal {
   display: none;
-  position: fixed; 
+  position: fixed;
   padding-top: 50px;
-  left: 0; 
+  left: 0;
   top: 0;
   width: 100%;
-  height: 100%; 
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
   display: flex;
   flex-direction: column;
-  position: relative; 
-  background-color: #343B3F;
-  padding: 20px; 
-  margin: auto; 
-  width: 90%;  
+  position: relative;
+  background-color: #343b3f;
+  padding: 20px;
+  margin: auto;
+  width: 90%;
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
 }
 .close-btn {
   align-self: flex-end;
-  color: lightgray; 
-  font-size: 30px;  
+  color: lightgray;
+  font-size: 30px;
   font-weight: bold;
 }
 
@@ -201,11 +213,12 @@ html {
   color: white;
 }
 
-.newsletter-form > input, textarea {
+.newsletter-form > input,
+textarea {
   margin-bottom: 1.5vh;
   padding: 1.3vh;
   font-family: 'Robot', sans-serif;
-  border: 1px solid #DFDFDF;
+  border: 1px solid #dfdfdf;
   border-radius: 5px;
 }
 
@@ -216,20 +229,20 @@ html {
   align-items: center;
 }
 
-.newsletter-check > input{
+.newsletter-check > input {
   height: 20px;
   width: 20px;
   margin-right: 4vw;
 }
 
- #inscriptionSend {
+#inscriptionSend {
   align-self: flex-end;
-  background-color: #FF881B;
-  color: white;;
+  background-color: #ff881b;
+  color: white;
   padding: 1.1vh 5vh;
   border-radius: 5px;
   border: none;
-} 
+}
 
 .arrow {
   display: none;
@@ -237,7 +250,7 @@ html {
 
 /* ticketing */
 
-.form-ticketing{
+.form-ticketing {
   text-align: center;
   background: var(--content-bg-color);
   width: 90vw;
@@ -392,7 +405,7 @@ footer {
   justify-content: space-around;
   align-items: center;
   text-align: center;
-  height: 30vh;
+  height: 100vh;
   width: 100%;
   background: linear-gradient(-45deg, #01235d, #af3233, #23a6d5, #1c6bfa);
   box-shadow: 0 30px 100px -20px rgba(0, 0, 0, 0.4);
@@ -401,17 +414,22 @@ footer {
   animation: animateFooter 10s ease-in-out infinite;
 }
 
-.footerMenu {
+hr {
+  width: 90vw;
+}
+
+.footerList {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
+  text-align: left;
   width: 100%;
   margin: 0;
   padding: 1em;
 }
 
 .footerItem {
-  color: white;
+  color: #212529;
 }
 
 .footerItem:hover {
@@ -420,8 +438,20 @@ footer {
   opacity: 0.8;
 }
 
+.footerList-title {
+  font-weight: bold;
+}
+
 .footerItemSeparator {
   color: white;
+}
+
+.footerList-legal-title {
+  color: #ffffff;
+}
+
+.footerList-legal {
+  color: #ffffff;
 }
 
 li {
@@ -429,12 +459,16 @@ li {
 }
 
 .footerSocialNetworks {
-  width: 50%;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   margin: 0;
   padding: 0.6em;
+}
+
+.footerSocialNetworks i {
+  margin-right: 1em;
 }
 
 .fa-instagram {
@@ -637,10 +671,10 @@ li {
   }
 
   .modal-content {
-    width: 40%;  
+    width: 40%;
   }
 
-  .newsletter-check > input{
+  .newsletter-check > input {
     margin-right: 1vw;
   }
 
@@ -673,7 +707,7 @@ li {
 
   /* ticketing */
 
-  .form-ticketing{
+  .form-ticketing {
     width: 60vw;
     margin: 10vh auto;
   }
